KAS-4579 Refactor auk-label class instances (part 2)

--- a/app/components/publications/publication/translations/translation-request-modal.hbs
+++ b/app/components/publications/publication/translations/translation-request-modal.hbs
@@ -27,7 +27,7 @@
             <AuFormRow>
               <AuLabel
                 for="translationNumberOfPages"
-                class="au-u-regular au-u-padding-bottom-small"
+                class="au-u-regular au-u-margin-bottom-tiny"
               >
                 {{t "number-of-pages-to-translate"}}
               </AuLabel>
@@ -46,7 +46,7 @@
             <AuFormRow>
               <AuLabel
                 for="translationNumberOfWords"
-                class="au-u-regular au-u-padding-bottom-small"
+                class="au-u-regular au-u-margin-bottom-tiny"
               >
                 {{t "number-of-words-to-translate"}}
               </AuLabel>
