--- a/app/templates/settings/users/index.hbs
+++ b/app/templates/settings/users/index.hbs
@@ -13,7 +13,7 @@
       </div>
       <div class="au-c-card au-o-box au-o-box--small">
         <div class="au-c-form">
-          <AuLabel class="au-u-padding-bottom-none">{{t "filter-on-last-seen"}}</AuLabel>
+          <AuLabel class="au-u-margin-bottom-none">{{t "filter-on-last-seen"}}</AuLabel>
           <AuFormRow data-test-route-settings-user-date-from class="au-u-margin-top-tiny">
             <AuLabel>{{t "from"}}</AuLabel>
             <Auk::Datepicker
