--- a/app/components/cases/parliament/document-versions-panel.hbs
+++ b/app/components/cases/parliament/document-versions-panel.hbs
@@ -1,4 +1,4 @@
-<Auk::Panel data-test-subcase-description-panel>
+<Auk::Panel>
   <Auk::Panel::Header>
     <Auk::Toolbar>
       <Auk::Toolbar::Group @position="left">
@@ -13,64 +13,52 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body
-    @noPadding={{and
-      this.submissionActivities.isResolved
-      (is-empty this.submissionActivities.value)
-    }}
+    @noPadding={{not @submissionActivities}}
     class="auk-u-bg-alt c-document-panel"
   >
-    {{#if this.submissionActivities.isResolved}}
-      {{#if (not (is-empty this.submissionActivities.value))}}
-        <ul class="vlc-status-timeline">
-          {{#each
-            this.submissionActivities.value
-            as |submissionActivity index|
-          }}
-            <li
-              class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
-            >
-              <div class="vlc-status-timeline__dot"></div>
-              <div
-                class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-tiny au-u-1-1"
-              >
-                {{#if
-                  (not (eq (inc index) this.submissionActivities.value.length))
-                }}
-                  {{t "edited-on"}}
-                  {{date-phrase submissionActivity.startDate}}
-                {{else}}
-                  {{t
-                    "sent-on-date-by-person"
-                    date=(date-phrase submissionActivity.startDate)
-                    person=submissionActivity.submitter.fullName
-                  }}
-                {{/if}}
-                <AuButton
-                  @skin="link"
-                  @icon="chevron-right"
-                  @iconAlignment="right"
-                  {{on
-                    "click"
-                    (set this "selectedSubmissionActivity" submissionActivity)
-                  }}
-                >{{t "view-documents-details"}}</AuButton>
-              </div>
-            </li>
-          {{/each}}
-        </ul>
-      {{else}}
-        <div>
-          <AuAlert
-            @skin="info"
-            @icon="info-circle"
-            class="au-u-margin-bottom-none"
+    {{#if @submissionActivities}}
+      <ul class="vlc-status-timeline">
+        {{#each @submissionActivities as |submissionActivity index|}}
+          <li
+            class="vlc-status-timeline__item vlc-status-timeline__item--neutral"
           >
-            {{t "no-documents-submitted-to-vp-yet"}}
-          </AuAlert>
-        </div>
-      {{/if}}
+            <div class="vlc-status-timeline__dot"></div>
+            <div
+              class="vlc-status-timeline__text au-u-flex au-u-flex--spaced-tiny au-u-1-1"
+            >
+              {{#if (not (eq (inc index) @submissionActivities.length))}}
+                {{t "edited-on"}}
+                {{date-phrase submissionActivity.startDate}}
+              {{else}}
+                {{t
+                  "sent-on-date-by-person"
+                  date=(date-phrase submissionActivity.startDate)
+                  person=submissionActivity.submitter.fullName
+                }}
+              {{/if}}
+              <AuButton
+                @skin="link"
+                @icon="chevron-right"
+                @iconAlignment="right"
+                {{on
+                  "click"
+                  (set this "selectedSubmissionActivity" submissionActivity)
+                }}
+              >{{t "view-documents-details"}}</AuButton>
+            </div>
+          </li>
+        {{/each}}
+      </ul>
     {{else}}
-      <AuLoader />
+      <div>
+        <AuAlert
+          @skin="info"
+          @icon="info-circle"
+          class="au-u-margin-bottom-none"
+        >
+          {{t "no-documents-submitted-to-vp-yet"}}
+        </AuAlert>
+      </div>
     {{/if}}
   </Auk::Panel::Body>
 </Auk::Panel>
