--- a/app/components/cases/parliament/newest-documents-panel.hbs
+++ b/app/components/cases/parliament/newest-documents-panel.hbs
@@ -1,4 +1,4 @@
-<Auk::Panel data-test-subcase-description-panel>
+<Auk::Panel>
   <Auk::Panel::Header>
     <Auk::Toolbar>
       <Auk::Toolbar::Group @position="left">
@@ -55,7 +55,7 @@
     </Auk::Panel::Body>
   {{else}}
     <Auk::Panel::Body>
-      <AuLoader />
+      <Auk::Loader />
     </Auk::Panel::Body>
   {{/if}}
 </Auk::Panel>
