--- a/app/components/cases/submitters.hbs
+++ b/app/components/cases/submitters.hbs
@@ -1,5 +1,5 @@
 {{#if this.loadSubmittersText.isRunning}}
-  <AuLoader />
+  <Auk::Loader />
 {{else}}
   {{#if this.submitters.length}}
     <FormatList @list={{this.submitters}} @locale="nl-be" as |formattedPart|>
