--- a/app/components/subcases/side-nav/parliament-subcase.hbs
+++ b/app/components/subcases/side-nav/parliament-subcase.hbs
@@ -16,8 +16,9 @@
     </div>
     <div class="au-u-margin-top-tiny">
       <Parliament::StatusPill 
-      @parliamentFlow={{@parliamentFlow}}
-      @useAltLabel={{true}} />
+        @parliamentFlow={{@parliamentFlow}}
+        @useAltLabel={{true}}
+      />
     </div>
   </LinkTo>
 </li>
