--- a/app/components/subcases/subcases-overview-header.hbs
+++ b/app/components/subcases/subcases-overview-header.hbs
@@ -16,10 +16,12 @@
             {{t "case"}}
           </span>
           <h4 class="auk-toolbar-complex__title au-u-padding-none">
-            <Auk::AbbreviatedText
-              @text={{or this.case.shortTitle this.case.title}}
-              @maxLength={{250}}
-            />
+            {{#if (not this.loadData.isRunning)}}
+              <Auk::AbbreviatedText
+                @text={{or this.case.shortTitle this.case.title}}
+                @maxLength={{250}}
+              />
+            {{/if}}
           </h4>
         </div>
       </Auk::Toolbar::Item>
