--- a/app/components/agenda/agendaitem/decision/digital.hbs
+++ b/app/components/agenda/agendaitem/decision/digital.hbs
@@ -39,7 +39,7 @@
     (and
       this.loadReport.isIdle
       (not this.isEditing)
-      this.pieceParts
+      this.report
     )
   }}
     <Auk::Panel::Body class="{{if this.isEditing 'au-u-background-gray-100'}}">
@@ -410,7 +410,7 @@
         </Auk::Panel::Body>
       {{/if}}
     {{/if}}
-  {{else}}
+  {{else if (user-may "manage-decisions")}}
     <Auk::Panel::Body
       class="au-o-flow {{if this.isEditing 'au-u-background-gray-100'}}"
     >
