--- a/app/components/utils/government-areas/government-areas-panel.hbs
+++ b/app/components/utils/government-areas/government-areas-panel.hbs
@@ -25,9 +25,15 @@
     </Auk::Toolbar>
   </Auk::Panel::Header>
   <Auk::Panel::Body @noPadding={{if @governmentAreas.length true false}}>
-    {{#if (and @subcase.isBekrachtiging @subcase.parliamentRetrievalActivity.themes)}}
+    {{#if @subcase.parliamentRetrievalActivity}}
+      <div class="auk-u-m-4 auk-u-mb-2 auk-u-mt-2">
+        <p><strong>{{t "authority-domain"}}: </strong>
+        {{or @subcase.parliamentRetrievalActivity.authorityDomain "-"}}
+        </p>
+      </div>
       <div class="auk-u-m-4 auk-u-mb-2 auk-u-mt-2">
         <p><strong>{{t "themes"}}: </strong>
+        {{#if @subcase.parliamentRetrievalActivity.themes}}
           <FormatList
             @list={{@subcase.parliamentRetrievalActivity.themes}}
             @locale="nl-be"
@@ -35,6 +41,9 @@
           >
             {{formattedPart.value}}
           </FormatList>
+        {{else}}
+          -
+        {{/if}}
         </p>
       </div>
     {{/if}}
