--- a/app/components/documents/document-card.hbs
+++ b/app/components/documents/document-card.hbs
@@ -155,15 +155,17 @@
               @agendaContext.agenda.previousVersion
             }}
           >
-            {{#unless (or this.loadPieceRelatedData.isRunning this.loadAccessLevelRelatedData.isRunning (not this.showAccessLevelPill))}}
-              <AccessLevelPill
-                @accessLevel={{this.piece.accessLevel}}
-                @isEditable={{@isEditable}}
-                @isDraft={{this.isDraftAccessLevel}}
-                @onChangeAccessLevel={{this.changeAccessLevel}}
-                @onConfirmChangeAccessLevel={{this.saveAccessLevel}}
-                @onCancelChangeAccessLevel={{this.reloadAccessLevel}}
-              />
+            {{#unless (or this.loadPieceRelatedData.isRunning this.loadAccessLevelRelatedData.isRunning)}}
+              {{#if this.showAccessLevelPill}}
+                <AccessLevelPill
+                  @accessLevel={{this.piece.accessLevel}}
+                  @isEditable={{@isEditable}}
+                  @isDraft={{this.isDraftAccessLevel}}
+                  @onChangeAccessLevel={{this.changeAccessLevel}}
+                  @onConfirmChangeAccessLevel={{this.saveAccessLevel}}
+                  @onCancelChangeAccessLevel={{this.reloadAccessLevel}}
+                />
+              {{/if}}
             {{/unless}}
           </Group.Item>
           {{#if this.showSignatureLoader}}
